# pas2c

./: .all-contributorsrc  .gitignore  CMakeLists.txt  Makefile  README.md
example/: gcd.pas  gcd_bug.pas  gcd_if.pas  gcd_no_blank.pas  gcd_origin.pas  knapsack.pas  kruskal.pas  lexer_test.pas  minimal_parser_test.pas  parser_test.pas  quicksort.pas  record.pas
example/error/: err_1.pas  err_2.pas  err_3.pas  lexer_error.pas  syntax_drop.pas  syntax_insert.pas  syntax_replace.pas
example/module_test/: const_array_addr.pas  lexer_test.pas  minimal_parser_test.pas  parser_test.pas
example/pascal-s-test/: test1.pas  test2.pas  test3.pas  test4.pas  test5.pas  test6.pas  test7.pas  test8.pas
gui/: codeeditor.py  gcd.pas  grammar.json  mainwindow.ui  mainwindow_ui.py  p2c-editor.py  p2ceditor.py  requirements.txt  tree_visual.py
gui/output/: tmp.c
include/: expression.json  grammar.json  minimal_parser_test_grammar.json
src/: code_generator.cpp  code_generator.h  config.h.in  debug.txt  getopt.cpp  lexer.cpp  lexer.h  main.cpp  p2c.cpp  parser.cpp  parser.h  semantic_analyzer.cpp  semantic_analyzer.h  symbol_table.cpp  symbol_table.h  syntax_tree.cpp  syntax_tree.h  syntaxtree.cpp  syntaxtree.h  test.cpp
